--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "bootstrap-grid-only-css": "^4.1.3",
+    "framer-motion": "^11.12.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
